# cpp-boilerplate

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
src/: core.cpp  core.h  main.cpp
test/: class-test.cpp  function-test.cpp
